# Atlas2

./: .gitignore  AGENTS.md  Cargo.toml  README.md  dist-workspace.toml
.codex/: config.toml
docs/: ARCHITECTURE.md  requirements.md
src/: app.rs  codex.rs  codex_sessions.rs  config.rs  daemon.rs  domain.rs  error.rs  filesystem.rs  main.rs  presentation.rs  services.rs  storage.rs  stt.rs  telegram.rs  telegram_ingress.rs
src/provider/: mod.rs
src/provider/claude/: mod.rs  sessions.rs
src/provider/codex/: mod.rs  sessions.rs
src/services/: approval.rs  folder.rs  mod.rs  model.rs  plan.rs  resume.rs  user_input.rs
src/services/turn/: events.rs  mod.rs
