[package]
name = "atlas2"
version = "0.1.10"
edition = "2024"
description = "Telegram bridge for local Codex sessions"
repository = "https://github.com/IhorPeresunko/Atlas2"
publish = false

[dependencies]
async-trait = "0.1.83"
axoupdater = "0.10.0"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.39", features = ["derive"] }
directories = "6.0.0"
futures = "0.3.31"
libc = "0.2.183"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3.23.0"

# Not published to crates.io, but still built/released by `dist`.
[package.metadata.dist]
dist = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
